crates/swc-react-native-codegen/tests/snapshots/transform_ts_test__ts_extends_local_interfaces.snap
---
source: crates/swc-react-native-codegen/tests/transform_ts_test.rs
assertion_line: 163
expression: result
---
import type { CodegenTypes as CT } from 'react-native';
import type { ViewProps } from 'ViewPropTypes';
const codegenNativeComponent = require('codegenNativeComponent');
interface SvgNodeCommonProps {
    name?: string;
    opacity?: CT.Float;
    matrix?: ReadonlyArray<CT.Float>;
}
interface SvgRenderableCommonProps {
    fill?: string;
    fillOpacity?: CT.Float;
    stroke?: string;
    strokeWidth?: CT.Float;
}
interface ModuleProps extends ViewProps, SvgNodeCommonProps, SvgRenderableCommonProps {
    cx?: CT.Float;
    cy?: CT.Float;
    r?: CT.Float;
    onSvgLayout?: CT.DirectEventHandler<Readonly<{
        width: CT.Int32;
    }>>;
}
const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const { ConditionallyIgnoredEventHandlers } = require('react-native/Libraries/NativeComponent/ViewConfigIgnore');
let nativeComponentName = 'RNSVGCircle';
export const __INTERNAL_VIEW_CONFIG = {
    uiViewClassName: "RNSVGCircle",
    directEventTypes: {
        topSvgLayout: {
            registrationName: "onSvgLayout"
        }
    },
    validAttributes: {
        name: true,
        opacity: true,
        matrix: true,
        fill: true,
        fillOpacity: true,
        stroke: true,
        strokeWidth: true,
        cx: true,
        cy: true,
        r: true,
        ...ConditionallyIgnoredEventHandlers({
            onSvgLayout: true
        })
    }
};
export default NativeComponentRegistry.get(nativeComponentName, ()=>__INTERNAL_VIEW_CONFIG);
