crates/swc-react-native-codegen/tests/snapshots/transform_ts_test__ts_simple_component_no_commands.snap
---
source: crates/swc-react-native-codegen/tests/transform_ts_test.rs
expression: result
---
import type { ViewProps } from 'ViewPropTypes';
import type { HostComponent } from 'react-native';
const codegenNativeComponent = require('codegenNativeComponent');
export interface ModuleProps extends ViewProps {
}
const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
let nativeComponentName = 'Module';
export const __INTERNAL_VIEW_CONFIG = {
    uiViewClassName: "Module",
    validAttributes: {}
};
export default NativeComponentRegistry.get(nativeComponentName, ()=>__INTERNAL_VIEW_CONFIG);
